# v-c-vm

./: .clang-format  .gitignore  LICENSE.md  Pipelinefile  TODO  meson.build  meson_options.txt
docs/: initial_design.md
include/vcvm/: builder.h  bytecode.h  error_codes.h  instruction.h  intrinsic.h  lib.h  opcode.h  opcodes.h  parser.h  size.h  stack_cert.h  stack_value.h  stdlib.h  uuid.h  vm.h
src/: lib.c  opcodes.c  vm.c
src/builder/: builder_internal.h  bytecode_builder_add_artifact.c  bytecode_builder_add_instruction.c  bytecode_builder_add_int.c  bytecode_builder_add_intrinsic.c  bytecode_builder_add_string.c  bytecode_builder_add_uuid.c  bytecode_builder_emit.c  bytecode_builder_init.c  bytecode_builder_total_size.c  bytecode_builder_write_artifact_constants.c  bytecode_builder_write_instructions.c  bytecode_builder_write_integer_constants.c  bytecode_builder_write_intrinsic_constants.c  bytecode_builder_write_jmptable.c  bytecode_builder_write_string_constants.c  bytecode_builder_write_uuid_constants.c
src/bytecode/: bytecode_dispose_artifact_constants.c  bytecode_dispose_instructions.c  bytecode_dispose_integer_constants.c  bytecode_dispose_intrinsic_constants.c  bytecode_dispose_jmptable.c  bytecode_dispose_string_constants.c  bytecode_dispose_uuid_constants.c  bytecode_init.c  bytecode_internal.h  bytecode_read_artifact_constants.c  bytecode_read_instructions.c  bytecode_read_int32.c  bytecode_read_integer_constants.c  bytecode_read_intrinsic.c  bytecode_read_intrinsic_constants.c  bytecode_read_jmptable.c  bytecode_read_magic.c  bytecode_read_string.c  bytecode_read_string_constants.c  bytecode_read_uint32.c  bytecode_read_uint8.c  bytecode_read_uuid.c  bytecode_read_uuid_constants.c
src/instruction/: add.c  and.c  assert.c  call.c  call_intrinsic.c  cmp.c  divide.c  dup.c  halt.c  instruction.c  invalid.c  load_const_artifact.c  load_const_int.c  load_const_string.c  load_const_uuid.c  lshift.c  modulo.c  multiply.c  nop.c  or.c  pop.c  power.c  push_context_cert.c  ret.c  rshift.c  subtract.c  swap.c  xor.c
src/intrinsic/: intrinsic_init.c  load_artifact.c  longcode_to_shortcode.c  string_contains.c  string_equals.c
src/intrinsic/string/: string_contains.c
src/stack_cert/: stack_cert_init.c
src/stack_value/: stack_value_copy.c  stack_value_init.c  stack_value_set_cert.c  stack_value_set_int.c  stack_value_set_string.c  stack_value_set_uuid.c
src/vm/: vm_decode_and_execute_arity3.c  vm_decode_and_execute_arity_0.c  vm_decode_and_execute_arity_1.c  vm_decode_and_execute_arity_2.c  vm_decode_and_execute_arity_3.c  vm_decode_opcode.c  vm_init.c  vm_pop.c  vm_push.c  vm_run_until_complete.c  vm_step.c
subprojects/: gtest.wrap  vccert.wrap  vccrypt.wrap  vcmodel.wrap  vpr.wrap
test/: builder.cpp  bytecode.cpp  bytecode.h  bytecode_parser.old  fx.cpp  instructions.cpp  opcode.cpp  usage.cpp
